# motion_quantization

./: .gitignore  README.md  pyproject.toml
experiments/: .gitignore  Development_Diary.md  multi-speaker.ipynb  normalize_skeleton.ipynb  polar.ipynb  polar_skeleton.ipynb
scripts/: .gitignore  __init__.py  load.py  render_codebook.py  render_quantized_video.py
src/: __init__.py
src/acquisition/: __main__.py  clips.py  download.py
src/dataset/: __main__.py  builder.py
src/extraction/: __main__.py  pose.py
src/motion_quantization/acquisition/: __main__.py  clips.py
src/motion_quantization/dataset/: __init__.py  builder.py  pose.py
src/motion_quantization/extraction/: __main__.py  audio.py  pose.py  transcription.py
src/motion_quantization/models/: __init__.py  vqvae.py
src/motion_quantization/quantization/: __init__.py  pose_quantizer.py
src/motion_quantization/utils/: cluster_plot.py  time.py  youtube.py
src/pats_test/: __main__.py
src/quantization/: __main__.py  clustering.py  codebook.py  normalization.py
src/utils/: __main__.py  constants.py  plot.py  skeletonPATS.py  time.py
tests/: pose_dataset.py
train/: tuning.py  tuning_kfold.py
