[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posemi-dataset"
version = "0.1.0"
description = "Posemi dataset processing and management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Paolo", email = "p.palumbo3@studenti.unipi.it"}
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "yt-dlp>=2025.11.12",
    "argparse>=1.4.0",
    "joblib>=1.5.2",
    "tqdm>=4.67.1",
    "moviepy>=2.2.1",
    "faster-whisper>=1.2.1",
    "ultralytics>=8.3.232",
    "hdbscan>=0.8.40",
    "pats",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
pats = { path = "../pats", editable = true }
