[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "motion_quantization"
version = "0.1.0"
description = "Posemi dataset processing and management"
readme = "README.md"
requires-python = ">=3.10,<=3.12"
license = {text = "MIT"}

authors = [
    {name = "Paolo", email = "p.palumbo3@studenti.unipi.it"}
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.5.2",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.232",
    "pats",
    "torch>=2.9.1",
    "vector-quantize-pytorch>=1.27.15",
    "scipy>=1.15.3",
    "wandb>=0.23.1",
    "weave>=0.52.23",
    "optuna>=4.6.0",
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "yt-dlp>=2026.3.17",
    "moviepy>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
pats = { path = "../pats" }

[tool.uv.workspace]
members = [
    ".",
]

